# ExactSamplers

./: .gitignore  ExactSamplers.opam  dune-project
analysis/: brownian.py  brownian_1000.csv  distr.sh  histogram.py  list_sorting.py
analysis/csv/: bitsExp50K.csv  bitsGaussian50K.csv  bitsGaussianEager50K.csv  bitsLap250K.csv  log1K.csv  log25k.csv  log2Lap50K.csv  logC.csv  logExp50K.csv  logHalfExpBern.csv  logK.csv  logK1M.csv  logQuad100K.csv
lib/: dune
test/: dune
