(lang dune 3.11)

(name ExactSamplers)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Markus de Medeiros")

(maintainers "Markus de Medeiros")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ExactSamplers)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
